[package]
name = "drow"
version = "0.1.1"
authors = ["Andrew Brinker <me@andrewbrinker.com>"]
description = "An opinionated static site builder."
documentation = "https://github.com/andrewbrinker/drow"
homepage = "https://github.com/andrewbrinker/drow"
repository = "https://github.com/andrewbrinker/drow"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "andrewbrinker/drow" }
is-it-maintained-open-issues = { repository = "andrewbrinker/drow" }

[dependencies]
clap = "2.25.0"
toml = "0.4.1"
git2 = "0.6.6"
getset = "0.0.5"
chrono = "0.4.0"
slog = "2.0.6"
sloggers = "0.2.0"
